- UPDATE: Styling for the selfUser component - NEW: layout for the selfUser component - UPDATE: Transitions + Themes for the selfUser component

--- a/static/themes/dark/theme.css
+++ b/static/themes/dark/theme.css
@@ -820,16 +820,11 @@
 
 /* Self User ( SelfUser.vue ) */
 .kiwi-controlinput-selfuser {
-    background: #201F1F;
+    background: #151515;
     color: #dedede;
-}
-
-.kiwi-controlinput-selfuser.kiwi-controlinput-selfuser--open {
     border: 1px solid #ddd;
-}
-
-.kiwi-selfuser-actions {
-    border-top: 1px solid #ddd;
+    border-left: none;
+    border-bottom: none;
 }
 
 .kiwi-selfuser-actions .u-button-secondary {
