- REMOVE: unused css for 'draw open background' - ADD: The Kiwi branded bar at the top will now change to red when disconnected from the network - CHANGE: ContainerHeader, Network - button now aligned on right side, restyled slightly

--- a/static/themes/default/theme.css
+++ b/static/themes/default/theme.css
@@ -55,6 +55,9 @@
 .kiwi-workspace::before {
     background: #42b992;
 }
+.kiwi-workspace.kiwi-wrap--disconnected::before {
+    background: #bf5155;
+}
 .kiwi-workspace::after{
     background-color: rgba(0, 0, 0, 0.4);
 }
