-CHANGE: moved all the colour related things out of the component and into the theme files

--- a/static/themes/coffee/theme.css
+++ b/static/themes/coffee/theme.css
@@ -1088,3 +1088,15 @@
     background: #fff;
     font-weight: 900;
 }
+
+.kiwi-awaystatusindicator {
+    border: 1px solid #e1e1e1;
+}
+
+.kiwi-awaystatusindicator-not-away {
+    background-color: #f1b386;
+}
+
+.kiwi-awaystatusindicator-away {
+    background-color: #b7b7b6;
+}
