--- a/static/themes/dark/theme.css
+++ b/static/themes/dark/theme.css
@@ -1274,3 +1274,15 @@
     color: #000;
     background: #d16c6c;
 }
+
+.kiwi-awaystatusindicator {
+    border: 1px solid #e1e1e1;
+}
+
+.kiwi-awaystatusindicator-not-away {
+    background-color: #42b992;
+}
+
+.kiwi-awaystatusindicator-away {
+    background-color: #d16c6c;
+}
