--- a/static/themes/nightswatch/theme.css
+++ b/static/themes/nightswatch/theme.css
@@ -1182,3 +1182,15 @@
     color: #000;
     background: #d16c6c;
 }
+
+.kiwi-awaystatusindicator {
+    border: 1px solid #e1e1e1;
+}
+
+.kiwi-awaystatusindicator-not-away {
+    background-color: #135f46;
+}
+
+.kiwi-awaystatusindicator-away {
+    background-color: #942626;
+}
