--- a/static/themes/default/theme.css
+++ b/static/themes/default/theme.css
@@ -1038,3 +1038,15 @@
     color: #fff;
     background: #d16c6c;
 }
+
+.kiwi-awaystatusindicator {
+    border: 1px solid #e1e1e1;
+}
+
+.kiwi-awaystatusindicator-not-away {
+    background-color: #42b992;
+}
+
+.kiwi-awaystatusindicator-away {
+    background-color: #d16c6c;
+}
