--- a/static/themes/sky/theme.css
+++ b/static/themes/sky/theme.css
@@ -1046,3 +1046,15 @@
     color: #fff;
     background: #d16c6c;
 }
+
+.kiwi-awaystatusindicator {
+    border: 1px solid #e1e1e1;
+}
+
+.kiwi-awaystatusindicator-not-away {
+    background-color: green;
+}
+
+.kiwi-awaystatusindicator-away {
+    background-color: red;
+}
