--- a/static/themes/osprey/theme.css
+++ b/static/themes/osprey/theme.css
@@ -1074,3 +1074,8 @@
 .kiwi-awaystatusindicator--away {
     background-color: red;
 }
+
+.kiwi-selfuser-error-message {
+    background: #d16c6c;
+    color: #fff;
+}
