--- a/static/themes/coffee/theme.css
+++ b/static/themes/coffee/theme.css
@@ -1091,11 +1091,11 @@
 
 .kiwi-awaystatusindicator {
     border: 1px solid #e1e1e1;
-    background-color: #f1b386;
+    background-color: #42b992;
 }
 
 .kiwi-awaystatusindicator--away {
-    background-color: #b7b7b6;
+    background-color: #d16c6c;
 }
 
 .kiwi-selfuser-error-message {
