Themes updated to give the buffer key input better styling.

--- a/static/themes/coffee/theme.css
+++ b/static/themes/coffee/theme.css
@@ -1065,6 +1065,16 @@
     text-decoration: underline;
 }
 
+/* Buffer Key */
+.kiwi-bufferkey input[type='password'] {
+    border: 1px solid #e8e8e8;
+    border-radius: 4px;
+}
+
+.kiwi-bufferkey-button {
+    border: 1px solid #e8e8e8;
+}
+
 /*Icon before the network in network list */
 .kiwi-statebrowser-network-name::before {
     content: '\f233';
