--- a/static/themes/grayfox/theme.css
+++ b/static/themes/grayfox/theme.css
@@ -1039,6 +1039,16 @@
     color: #fff;
 }
 
+/* Buffer Key */
+.kiwi-bufferkey input[type='password'] {
+    border: 1px solid #e8e8e8;
+    border-radius: 4px;
+}
+
+.kiwi-bufferkey-button {
+    border: 1px solid #e8e8e8;
+}
+
 /*Icon before the network in network list */
 .kiwi-statebrowser-network-name::before {
     content: '\f233';
