--- a/static/themes/coffee/theme.css
+++ b/static/themes/coffee/theme.css
@@ -1068,6 +1068,7 @@
 /* Buffer Key */
 .kiwi-bufferkey input[type='password'] {
     border: 1px solid #e8e8e8;
+    color: #201F1F;
     border-radius: 4px;
 }
 
