Fixed GrayFox theme password input text color.

--- a/static/themes/grayfox/theme.css
+++ b/static/themes/grayfox/theme.css
@@ -1042,6 +1042,7 @@
 /* Buffer Key */
 .kiwi-bufferkey input[type='password'] {
     border: 1px solid #e8e8e8;
+    color: #201F1F;
     border-radius: 4px;
 }
 
