Themes updated to give the buffer key input better styling fixes #826 (#828)
* Themes updated to give the buffer key input better styling.

* Fixed Coffee theme password input text color.

* Fixed GrayFox theme password input text color.

* Adjusted Osprey theme.

* Simplified styles for buffer key input border across themes

* Simplified styles for buffer key input border across themes, (missed in last commit)

--- a/static/themes/default/theme.css
+++ b/static/themes/default/theme.css
@@ -1012,6 +1012,11 @@
 }
 
 /* Buffer Key */
+.kiwi-bufferkey input[type='password'] {
+    border: 1px solid #fff;
+    color: #fff;
+}
+
 .kiwi-bufferkey-button {
     border: 1px solid #fff;
 }
