--- a/static/themes/grayfox/theme.css
+++ b/static/themes/grayfox/theme.css
@@ -50,10 +50,10 @@
     background: #fff;
 }
 .kiwi-workspace::before {
-    background: #414956;
+    background: #42b992;
 }
-.kiwi-workspace::after{
-    background-color: rgba(0, 0, 0, 0.4);
+.kiwi-workspace::after {
+    background: #bf5155;
 }
 
 /* App - Tabs */
