--- a/static/themes/radioactive/theme.css
+++ b/static/themes/radioactive/theme.css
@@ -47,8 +47,11 @@
 .kiwi-workspace::before {
     background: #5dd895;
 }
-.kiwi-workspace::after{
-    background-color: rgba(0, 0, 0, 1);
+.kiwi-workspace::before {
+    background: #42b992;
+}
+.kiwi-workspace::after {
+    background: #bf5155;
 }
 
 /* App - Tabs */
