--- a/static/themes/sky/theme.css
+++ b/static/themes/sky/theme.css
@@ -50,10 +50,10 @@
 
 /* App ( App.vue ) */
 .kiwi-workspace::before {
-    background: #4dafc5;
+    background: #42b992;
 }
-.kiwi-workspace::after{
-    background-color: rgba(0, 0, 0, 0.4);
+.kiwi-workspace::after {
+    background: #bf5155;
 }
 
 /* App - Tabs */
