--- a/static/themes/default/theme.css
+++ b/static/themes/default/theme.css
@@ -55,8 +55,8 @@
 .kiwi-workspace::before {
     background: #42b992;
 }
-.kiwi-workspace::after{
-    background-color: rgba(0, 0, 0, 0.4);
+.kiwi-workspace::after {
+    background: #bf5155;
 }
 
 /* App - Tabs */
