- Make the CSS selector for the 'disconnected' bar at the top, more specific

--- a/static/themes/dark/theme.css
+++ b/static/themes/dark/theme.css
@@ -73,7 +73,7 @@
 .kiwi-workspace::before {
     background: #42b992;
 }
-.kiwi-workspace::after {
+.kiwi-workspace--disconnected::after {
     background: #bf5155;
 }
 
