--- a/static/themes/coffee/theme.css
+++ b/static/themes/coffee/theme.css
@@ -53,7 +53,7 @@
 .kiwi-workspace::before {
     background: #42b992;
 }
-.kiwi-workspace::after {
+.kiwi-workspace--disconnected::after {
     background: #bf5155;
 }
 
