--- a/static/themes/default/theme.css
+++ b/static/themes/default/theme.css
@@ -55,7 +55,7 @@
 .kiwi-workspace::before {
     background: #42b992;
 }
-.kiwi-workspace::after {
+.kiwi-workspace--disconnected::after {
     background: #bf5155;
 }
 
