--- a/static/themes/osprey/theme.css
+++ b/static/themes/osprey/theme.css
@@ -62,7 +62,7 @@
 .kiwi-workspace::before {
     background: #42b992;
 }
-.kiwi-workspace::after {
+.kiwi-workspace--disconnected::after {
     background: #bf5155;
 }
 
