--- a/static/themes/radioactive/theme.css
+++ b/static/themes/radioactive/theme.css
@@ -50,7 +50,7 @@
 .kiwi-workspace::before {
     background: #42b992;
 }
-.kiwi-workspace::after {
+.kiwi-workspace--disconnected::after {
     background: #bf5155;
 }
 
