- Change background colour of the avatar in statebrowser for some themes - Change the border colour for the away Status Indicator in the statebrowser for all themes

--- a/static/themes/coffee/theme.css
+++ b/static/themes/coffee/theme.css
@@ -706,12 +706,15 @@
 }
 
 .kiwi-statebrowser-usermenu-avatar {
-    background-color: #000;
+    background-color: #7d6859;
     color: #fff;
 }
 .kiwi-statebrowser-usermenu-avatar:hover {
     background-color: #8e715c;
     color: #fff;
+}
+.kiwi-statebrowser-usermenu .kiwi-awaystatusindicator {
+    border: 1px solid #8e715b;
 }
 
 .kiwi-aboutbuffer {
