--- a/static/themes/radioactive/theme.css
+++ b/static/themes/radioactive/theme.css
@@ -738,6 +738,9 @@
     background-color: #5dd895;
     color: #fff;
 }
+.kiwi-statebrowser-usermenu .kiwi-awaystatusindicator {
+    border: 1px solid #1a2f24;
+}
 
 /* If the user clicks on their avatar we 'open' the settings */
 .kiwi-statebrowser-usermenu--open {
