--- a/static/themes/default/theme.css
+++ b/static/themes/default/theme.css
@@ -725,6 +725,9 @@
     background-color: #42b992;
     color: #fff;
 }
+.kiwi-statebrowser-usermenu .kiwi-awaystatusindicator {
+    border: 1px solid #22221f;
+}
 
 /* If the user clicks on their avatar we 'open' the settings */
 .kiwi-statebrowser-usermenu--open {
