--- a/static/themes/nightswatch/theme.css
+++ b/static/themes/nightswatch/theme.css
@@ -789,12 +789,15 @@
 }
 
 .kiwi-statebrowser-usermenu-avatar {
-    background-color: #999;
+    background-color: #000;
     color: #d8d8d8;
 }
 .kiwi-statebrowser-usermenu-avatar:hover {
     background-color: #ddd;
     color: #fff;
+}
+.kiwi-statebrowser-usermenu .kiwi-awaystatusindicator {
+    border: 1px solid #000;
 }
 
 /* If the user clicks on their avatar we 'open' the settings */
